[project]
name = "operation-car"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pynput (>=1.7.7)",
    "python3-xlib (>=0.15,<0.16)",
    "pygame (>=2.6.1,<3.0.0)",
    "pyserial (>=3.5,<4.0)",
    "pyfirmata (>=1.1.0,<2.0.0)",
    "keyboard (>=0.13.5,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "*.py" }
]